--- a/TVShow/ShowDetails/ShowDetails.storyboard
+++ b/TVShow/ShowDetails/ShowDetails.storyboard
@@ -134,6 +134,9 @@
                                         <state key="normal" image="ic-fab-button">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="addEpisodesButtonTap:" destination="jZI-p5-Fwb" eventType="touchUpInside" id="SgG-A4-SU9"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
