--- a/TVShow/ShowDetails/ShowDetails.storyboard
+++ b/TVShow/ShowDetails/ShowDetails.storyboard
@@ -24,30 +24,28 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="167"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-logo" translatesAutoresizingMaskIntoConstraints="NO" id="w4D-xy-t1c">
-                                        <rect key="frame" x="113" y="41.5" width="150" height="83"/>
+                                        <rect key="frame" x="2" y="2" width="371" height="163"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PGh-hd-9sa">
-                                        <rect key="frame" x="10" y="10" width="40" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="FnG-ev-pl0"/>
-                                            <constraint firstAttribute="width" constant="40" id="gEX-ln-6aL"/>
-                                        </constraints>
-                                        <state key="normal" image="ic-navigate-back"/>
-                                        <connections>
-                                            <action selector="backButtonTap:" destination="jZI-p5-Fwb" eventType="touchUpInside" id="Ycv-sl-nhI"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="PGh-hd-9sa" firstAttribute="top" secondItem="Rdp-hE-iEn" secondAttribute="top" constant="10" id="7x2-FD-T2s"/>
-                                    <constraint firstItem="w4D-xy-t1c" firstAttribute="centerY" secondItem="Rdp-hE-iEn" secondAttribute="centerY" id="Lpy-VF-EmV"/>
-                                    <constraint firstItem="w4D-xy-t1c" firstAttribute="width" secondItem="Rdp-hE-iEn" secondAttribute="width" multiplier="0.4" id="V0g-nn-4ny"/>
-                                    <constraint firstItem="w4D-xy-t1c" firstAttribute="centerX" secondItem="Rdp-hE-iEn" secondAttribute="centerX" id="a78-ia-AEF"/>
-                                    <constraint firstItem="PGh-hd-9sa" firstAttribute="leading" secondItem="Rdp-hE-iEn" secondAttribute="leading" constant="10" id="kU9-zi-3j8"/>
-                                    <constraint firstItem="w4D-xy-t1c" firstAttribute="height" secondItem="Rdp-hE-iEn" secondAttribute="height" multiplier="0.5" id="mbm-ED-M2X"/>
+                                    <constraint firstItem="w4D-xy-t1c" firstAttribute="leading" secondItem="Rdp-hE-iEn" secondAttribute="leading" constant="2" id="Jpv-vt-xWc"/>
+                                    <constraint firstAttribute="trailing" secondItem="w4D-xy-t1c" secondAttribute="trailing" constant="2" id="WA4-ds-9yd"/>
+                                    <constraint firstAttribute="bottom" secondItem="w4D-xy-t1c" secondAttribute="bottom" constant="2" id="Yuk-Ys-BcV"/>
+                                    <constraint firstItem="w4D-xy-t1c" firstAttribute="top" secondItem="Rdp-hE-iEn" secondAttribute="top" constant="2" id="vx5-zs-hlq"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PGh-hd-9sa">
+                                <rect key="frame" x="10" y="30" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="FnG-ev-pl0"/>
+                                    <constraint firstAttribute="width" constant="40" id="gEX-ln-6aL"/>
+                                </constraints>
+                                <state key="normal" image="ic-navigate-back"/>
+                                <connections>
+                                    <action selector="backButtonTap:" destination="jZI-p5-Fwb" eventType="touchUpInside" id="Ycv-sl-nhI"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ene-IC-05P" userLabel="DescView">
                                 <rect key="frame" x="0.0" y="187" width="375" height="161.5"/>
                                 <subviews>
@@ -99,7 +97,7 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7Q-DO-FPm">
                                                             <rect key="frame" x="15" y="11" width="75" height="22"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <color key="textColor" red="1" green="0.45882352939999999" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uPK-RB-vtS">
@@ -169,6 +167,7 @@
                             <constraint firstItem="PSC-en-uCh" firstAttribute="trailing" secondItem="bLY-2w-pNt" secondAttribute="trailing" constant="5" id="DZj-eU-gC0"/>
                             <constraint firstItem="Ene-IC-05P" firstAttribute="height" secondItem="PSC-en-uCh" secondAttribute="height" multiplier="0.25" id="LRs-7B-BBl"/>
                             <constraint firstItem="Rdp-hE-iEn" firstAttribute="leading" secondItem="PSC-en-uCh" secondAttribute="leading" id="QDO-eC-70D"/>
+                            <constraint firstItem="PGh-hd-9sa" firstAttribute="leading" secondItem="PSC-en-uCh" secondAttribute="leading" constant="10" id="TaA-vg-FKn"/>
                             <constraint firstItem="PSC-en-uCh" firstAttribute="trailing" secondItem="Rdp-hE-iEn" secondAttribute="trailing" id="V3r-20-3dx"/>
                             <constraint firstItem="Rdp-hE-iEn" firstAttribute="top" secondItem="PSC-en-uCh" secondAttribute="top" id="abW-13-UiO"/>
                             <constraint firstItem="PSC-en-uCh" firstAttribute="trailing" secondItem="nEs-Y3-URm" secondAttribute="trailing" id="bbJ-ys-jcw"/>
@@ -177,6 +176,7 @@
                             <constraint firstItem="nEs-Y3-URm" firstAttribute="leading" secondItem="PSC-en-uCh" secondAttribute="leading" id="jmt-0q-2sN"/>
                             <constraint firstItem="nEs-Y3-URm" firstAttribute="height" secondItem="PSC-en-uCh" secondAttribute="height" multiplier="0.4" id="kp3-VK-Dku"/>
                             <constraint firstItem="nEs-Y3-URm" firstAttribute="top" secondItem="bLY-2w-pNt" secondAttribute="bottom" id="mQi-ox-t9N"/>
+                            <constraint firstItem="PGh-hd-9sa" firstAttribute="top" secondItem="PSC-en-uCh" secondAttribute="top" constant="10" id="msO-IW-qbh"/>
                             <constraint firstItem="Ene-IC-05P" firstAttribute="leading" secondItem="PSC-en-uCh" secondAttribute="leading" id="sEy-Ka-ivg"/>
                             <constraint firstItem="PSC-en-uCh" firstAttribute="bottom" secondItem="nEs-Y3-URm" secondAttribute="bottom" id="ssh-wM-DUz"/>
                             <constraint firstItem="bLY-2w-pNt" firstAttribute="leading" secondItem="PSC-en-uCh" secondAttribute="leading" constant="5" id="ugY-eg-y88"/>
@@ -187,6 +187,7 @@
                     <connections>
                         <outlet property="descriptionLabel" destination="dR9-OG-klM" id="OJ7-2S-L4q"/>
                         <outlet property="numberOfEpisodes" destination="bLY-2w-pNt" id="0JW-9i-z28"/>
+                        <outlet property="showImageView" destination="w4D-xy-t1c" id="lVS-JS-aAs"/>
                         <outlet property="tableView" destination="dcG-k7-JBA" id="6A8-4R-mBp"/>
                         <outlet property="titleLabel" destination="xTr-jD-THX" id="dfM-Wb-Rzz"/>
                     </connections>
